--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
             cd news-frontend/
             git stash
             git pull origin master --rebase
-            rm -rf ./build
+            rm -rf ./dist
             yarn install --legacy-peer-deps
             yarn add react-hook-form
             yarn build
@@ -27,5 +27,5 @@ jobs:
             pm2 restart all
             sudo rm -rf /var/www/news-app
             sudo mkdir /var/www/news-app
-            sudo cp -rf ./build/* /var/www/news-app
+            sudo cp -rf ./dist/* /var/www/news-app
 
