--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
             yarn build
             pm2 stop all
             pm2 restart all
-            sudo rm -rf /var/www/news-app
-            sudo mkdir /var/www/news-app
-            sudo cp -rf ./dist/* /var/www/news-app
+            sudo rm -rf /var/www/news-app/*
+            sudo cp -r ./dist/* /var/www/news-app/
+
 
